--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ray-sphere-intersection": "^1.0.0",
     "ray-triangle-intersection": "^1.0.3",
     "regl": "^1.3.0",
+    "svg-mesh-3d": "^1.1.0",
     "vertices-bounding-box": "^1.0.0"
   },
   "devDependencies": {
